# sleep-framework

./: .gitignore  CLAUDE.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml
docs/: KV_INJECTION_DESIGN.md  PROGRESS_REPORT_2026-04-30.md  SLEEP_Formalization.md  SLEEP_Mathematical_Notebook.md
experiments/configs/: base.yaml  qwen7b.yaml  tiny_poc.yaml
experiments/data/: facts_200.json
experiments/results/: multi_cycle_naive_lora_3c_2026-04-30_13-10-42.json  multi_cycle_sleep_3c_2026-04-30_13-00-40.json
experiments/scripts/: 01_validate_tagging.py  02_validate_wfast.py  03_single_sleep_cycle.py  04_paired_recall_test.py  05_naive_lora_baseline.py  06_wfast_only_diagnostic.py  06b_kv_diagnostic.py  07_full_kv_pipeline.py  08_multi_cycle.py  generate_facts_dataset.py
logbook/: 2026-03-27_project_setup.md  2026-04-07_experiment_01_tagging.md  2026-04-07_experiment_02_wfast.md  2026-04-07_experiment_03_first_attempt.md  2026-04-07_experiment_03_tuning.md  2026-04-30_experiment_03_qwen7b_alpha_slow.md  2026-04-30_experiment_03_qwen7b_delta_max_bound.md  2026-04-30_experiment_03_qwen7b_quality_gap.md  2026-04-30_experiment_03_v5_200facts_milestone.md  2026-04-30_experiment_03_validation_strict.md  2026-04-30_kv_cache_order_bug.md  TEMPLATE.md
paper/: main.docx  main.tex  references.bib
paper/figures/: generate_figures.py
paper/sections/: 01_abstract_intro.tex  02_background_method.tex  03_experimental_setup.tex  04_results.tex  05_related_discussion_conclusion.tex  06_appendix.tex
sleep/: __init__.py  config.py
sleep/evaluation/: __init__.py  baselines.py  (+6 more)
(+58 files in other folders)
